Refactor application to rename and enhance functionality; introduce system tray icon support and minimize to tray feature

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
     "iniciar_con_windows": false,
-    "mostrar_notificaciones": true
+    "mostrar_notificaciones": true,
+    "minimizar_al_tray": true
 }
